# TrainStationSim

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
tss/: CMakeLists.txt  INIReader.h  activity.cpp  activity.h  boardingChecklist.cpp  boardingChecklist.h  clock.cpp  clock.h  event.cpp  event.h  id.cpp  id.h  main.cpp  manageSystem.cpp  manageSystem.h  passenger.cpp  passenger.h  passengerManager.cpp  passengerManager.h  passengerSpawner.h  passengerState.h  platform.cpp  platform.h  space.cpp  space.h  spaceLayout.cpp  spaceLayout.h  stage.h  station.h  train.cpp  train.h  trainManager.cpp  trainManager.h  trainPassengerSpawner.cpp  trainPassengerSpawner.h
tss/data/: default.ini  default_schedule.json
